activate conda env in ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,54 +30,67 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: install mamba
-      shell: bash -l {0}
-      run: conda install mamba -c conda-forge --yes
+      run: |
+        conda activate ecomp_experiment
+        conda install mamba -c conda-forge --yes
 
     - name: create environment
-      shell: bash -l {0}
-      run: mamba env create -f environment.yml
-
-    - name: Update pip, wheel, and setuptools
-      shell: bash -l {0}
-      run: python -m pip install --upgrade pip wheel setuptools
-
-    - name: finish setup
-      shell: bash -l {0}
       run: |
+        mamba env create -f environment.yml
+        conda activate ecomp_experiment
         conda info
         conda list
+
+    - name: Update pip, wheel, and setuptools
+      run: |
+        conda activate ecomp_experiment
+        python -m pip install --upgrade pip wheel setuptools
+
+    - name: finish setup
+      run: |
+        conda activate ecomp_experiment
         pre-commit install
 
     - uses: actions/checkout@v2
     - name: Build sdist
-      shell: bash -l {0}
-      run: python setup.py sdist
+      run:  |
+        conda activate ecomp_experiment
+        python setup.py sdist
     - name: Install sdist
-      shell: bash -l {0}
-      run: pip install ./dist/ecomp_experiment-*
+      run:  |
+        conda activate ecomp_experiment
+        pip install ./dist/ecomp_experiment-*
     - name: Clean up working directory
-      shell: bash -l {0}
-      run: rm -rf ./*
+      run:  |
+        conda activate ecomp_experiment
+        rm -rf ./*
     - name: Try importing ecomp_experiment
-      shell: bash -l {0}
-      run: python -c 'import ecomp_experiment; print(ecomp_experiment.__version__)'
+      run:  |
+        conda activate ecomp_experiment
+        python -c 'import ecomp_experiment; print(ecomp_experiment.__version__)'
     - name: Remove sdist install
-      shell: bash -l {0}
-      run: pip uninstall -y ecomp_experiment
+      run:  |
+        conda activate ecomp_experiment
+        pip uninstall -y ecomp_experiment
 
     - uses: actions/checkout@v2
     - name: Build wheel
-      shell: bash -l {0}
-      run: python setup.py bdist_wheel
+      run:  |
+        conda activate ecomp_experiment
+        python setup.py bdist_wheel
     - name: Install wheel
-      shell: bash -l {0}
-      run: pip install ./dist/ecomp_experiment-*.whl
+      run:  |
+        conda activate ecomp_experiment
+        pip install ./dist/ecomp_experiment-*.whl
     - name: Clean up working directory
-      shell: bash -l {0}
-      run: rm -rf ./*
+      run:  |
+        conda activate ecomp_experiment
+        rm -rf ./*
     - name: Try importing ecomp_experiment
-      shell: bash -l {0}
-      run: python -c 'import ecomp_experiment; print(ecomp_experiment.__version__)'
+      run:  |
+        conda activate ecomp_experiment
+        python -c 'import ecomp_experiment; print(ecomp_experiment.__version__)'
     - name: Remove wheel install
-      shell: bash -l {0}
-      run: pip uninstall -y ecomp_experiment
+      run:  |
+        conda activate ecomp_experiment
+        pip uninstall -y ecomp_experiment
