--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -30,24 +30,27 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: install mamba
-      shell: bash -l {0}
-      run: conda install mamba -c conda-forge --yes
+      run: |
+        conda install mamba -c conda-forge --yes
 
     - name: create environment
-      shell: bash -l {0}
-      run: mamba env create -f environment.yml
-
-    - name: Update pip, wheel, and setuptools
-      shell: bash -l {0}
-      run: python -m pip install --upgrade pip wheel setuptools
-
-    - name: finish setup
-      shell: bash -l {0}
       run: |
+        mamba env create -f environment.yml
+        conda activate ecomp_experiment
         conda info
         conda list
+
+    - name: Update pip, wheel, and setuptools
+      run: |
+        conda activate ecomp_experiment
+        python -m pip install --upgrade pip wheel setuptools
+
+    - name: finish setup
+      run: |
+        conda activate ecomp_experiment
         pre-commit install
 
     - name: Check formatting
       run: |
+        conda activate ecomp_experiment
         pre-commit run --all-files || ( git status --short ; git diff ; exit 1 )
