install package as editable in tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
       shell: bash -l {0}
       run: |
         pre-commit install
+        pip install -e .
 
     - name: Run pytest and upload coverage
       shell: bash -l {0}
